--- a/charts/love-manager/values.yaml
+++ b/charts/love-manager/values.yaml
@@ -8,9 +8,6 @@ serviceType: ClusterIP
 ports:
   container: 8000
   node: 30000
-pvcMountpoint:
-- name: love-manager
-  path: /usr/src/love-manager
 envSecretKeyName: love
 env:
   SERVER_URL: love.lsst.local
@@ -31,7 +28,7 @@ envSecrets:
   CMD_USER_PASS: manager-cmd-user-password
   DB_PASS: database-password
   REDIS_PASS: redis-password
-configMount: /usr/src/love-manager
+configMount: /usr/src/love/manager/config
 config: |
     {
       "alarms": {
