--- a/charts/love-nginx/templates/nginx-deployment.yaml
+++ b/charts/love-nginx/templates/nginx-deployment.yaml
@@ -26,7 +26,12 @@ spec:
       - name: love-manager-static
         image: "{{ .Values.initContainers.manager.image.repository }}:{{ .Values.initContainers.manager.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-        command: [ "/bin/sh", "-c", "mkdir -p /usr/src/love-manager/media/thumbnails; mkdir -p /usr/src/love-manager/media/configs; cp -Rv /usr/src/love/manager/static /usr/src/love-manager; cp -uv /usr/src/love/manager/ui_framework/fixtures/thumbnails/* /usr/src/love-manager/media/thumbnails; cp -uv /usr/src/love/manager/api/fixtures/configs/* /usr/src/love-manager/media/configs" ]
+        {{- with .Values.initContainers.manager.command }}
+        command:
+        {{- range $item := $.Values.initContainers.manager.command }}
+          - {{ $item | quote }}
+        {{- end }}
+        {{- end }}
         volumeMounts:
           - mountPath: /usr/src
             name: {{ .Values.staticStore.name }}
