--- a/charts/cluster-config/Chart.yaml
+++ b/charts/cluster-config/Chart.yaml
@@ -1,4 +1,6 @@
-apiVersion: v1
+apiVersion: v2
 name: cluster-config
+version: 0.2.0
+maintainers:
+  - name: mareuter
 description: A Helm chart for handling CSC cluster configuration.
-version: 0.1.0
