--- a/charts/kafka-producers/Chart.yaml
+++ b/charts/kafka-producers/Chart.yaml
@@ -1,4 +1,6 @@
-apiVersion: v1
+apiVersion: v2
 name: kafka-producers
+version: 0.8.0
+maintainers:
+  - name: mareuter
 description: A Helm chart for deploying the Kafka producers.
-version: 0.7.0
