--- a/charts/ospl-config/Chart.yaml
+++ b/charts/ospl-config/Chart.yaml
@@ -1,4 +1,6 @@
 apiVersion: v1
 name: ospl-config
+version: 0.6.0
+maintainers:
+  - name: mareuter
 description: A Helm chart for handling OSPL configuration.
-version: 0.5.14
