--- a/charts/ospl-daemon/Chart.yaml
+++ b/charts/ospl-daemon/Chart.yaml
@@ -1,4 +1,6 @@
-apiVersion: v1
+apiVersion: v2
 name: ospl-daemon
+version: 0.3.0
+maintainers:
+  - name: mareuter
 description: A Helm chart for handling OSPL shared memory daemon.
-version: 0.2.1
