--- a/charts/csc/templates/job.yaml
+++ b/charts/csc/templates/job.yaml
@@ -75,7 +75,7 @@ spec:
           imagePullPolicy: {{ .Values.initContainer.pullPolicy }}
           securityContext:
             privileged: true
-      {{- end }} 
+      {{- end }}
       volumes:
         {{- if .Values.useExternalConfig }}
         - name: osplconfig
@@ -92,6 +92,7 @@ spec:
         - name: entrypoint
           configMap:
             name: {{ .Release.Name }}-entrypoint
+            defaultMode: 0755
             items:
               - key: .startup.sh
                 path: .startup.sh
