--- a/charts/csc/values-dsm1-pvc.yaml
+++ b/charts/csc/values-dsm1-pvc.yaml
@@ -25,6 +25,7 @@ pvcMountpoint:
     accessMode: ReadOnlyMany
     claimSize: 500Mb
   - name: path3
+    altCsc: test
     path: /mnt
     ids:
       uid: 123
