--- a/charts/kafka-producers/values.yaml
+++ b/charts/kafka-producers/values.yaml
@@ -1,26 +1,55 @@
-# Default values for kafka-producers.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
 image:
+  # -- The Docker registry name of the container image to use for the producers
   repository: lsstts/salkafka
+  # -- The tag of the container image to use for the producers
   tag: v1.1.0_salobj_v5.4.0_xml_v4.7.0
+  # -- The policy to apply when pulling an image for deployment
   pullPolicy: IfNotPresent
-
+  # -- The tag name for the Nexus3 Docker repository secrets if private images need to be pulled
+  nexus3:
 env:
+  # -- The LSST_DDS_PARTITION_PREFIX name applied to all producer containers
   lsstDdsPartitionPrefix: rubinobs
+  # -- The URI for the Kafka broker that received the generated Kafka messages
   brokerIp: kafka-0-tucson-teststand-efd.lsst.codes
+  # -- The port associated with the Kafka broker specified in brokerIp
   brokerPort: 31090
+  # -- The URL for the Kafka broker associated schema registry
   registryAddr: https://schema-registry-tucson-teststand-efd.lsst.codes
+  # -- The number of Kafka brokers to wait for an ack from
   waitAck: 1
+  # -- The number of partitions that the producers are supporting
   partitions: 1
+  # -- The number of replications available to the producers
   replication: 3
+  # -- This value determines the logging level for the producers
   logLevel: 10
-
+# -- This section holds the configuration of the individual producers.
+# Each producer is specified by a name (i.e. _auxtel_) which becomes the definition point for the rest of the information.
+# Then name specifed must be used in place of the _name_ attribute.
+# _name.cscs_ (The list of CSCs that the named producer will monitor),
+# _name.image_ (OPTIONAL: This section provides override of the default image section),
+# _name.env_ (OPTIONAL: This section provides override of the defaults env section)
+producers: {}
+# -- This sets whether to rely on the ConfigMap for OSPL configuration or the internal OSPL configuration
 useExternalConfig: true
+# -- This is the version of the OpenSplice library to run. It is used to set the location of the OSPL configuration file
 osplVersion: V6.9.0
+# -- This is the namespace in which the producers will be placed
 namespace: kafka-producers
-
+# -- (string) This is the path to the Kubernetes local store where the shared memory database will be written
+shmemDir:
+# -- (bool) This sets the use of the host process ID system. Defaults to true if not specified
+useHostPid:
+# -- (bool) This sets the use of the host inter-process communication system. Defaults to true if not specified
+useHostIpc:
+# -- This allows the specification of pod annotations
+annotations: {}
+# -- This allows the specification of resources (CPU, memory) requires to run the container
 resources: {}
+# -- This allows the specification of using specific nodes to run the pod
 nodeSelector: {}
+# -- This specifies the tolerations of the pod for any system taints
 tolerations: []
+# -- This specifies the scheduling constraints of the pod
 affinity: {}
