Changes for csc chart.
* Handle annotations separately.
* Add chart documentation.

--- a/charts/csc/values-dsm1-init-container.yaml
+++ b/charts/csc/values-dsm1-init-container.yaml
@@ -11,7 +11,8 @@ env:
 osplVersion: V6.9.0
 namespace: csc
 
-useMulticast: true
+annotations:
+  k8s.v1.cni.cncf.io/networks: kube-system/macvlan-conf
 initContainer:
   repository: lsstit/ddsnet4u
   tag: latest
