--- a/charts/csc/templates/job.yaml
+++ b/charts/csc/templates/job.yaml
@@ -5,8 +5,9 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     csc: {{ .Release.Name }}
-  {{- if and $.Values.useMulticast (ne ( $.Values.useMulticast | toString ) "<nil>" ) }}
-  {{- include "multicast.annotation" . | nindent 2 }}
+  {{- with $.Values.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
   completions: 1
@@ -14,8 +15,9 @@ spec:
     metadata:
       labels:
         csc: {{ .Release.Name }}
-      {{- if and $.Values.useMulticast (ne ( $.Values.useMulticast | toString ) "<nil>" ) }}
-      {{- include "multicast.annotation" . | nindent 6 }}
+      {{- with $.Values.annotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
       containers:
