Add storageClass for PVCs.

--- a/charts/csc/templates/mountpoint-pvc.yaml
+++ b/charts/csc/templates/mountpoint-pvc.yaml
@@ -20,5 +20,6 @@ spec:
   resources:
     requests:
       storage: {{ $values.claimSize }}
+  storageClassName: {{ $values.storageClass }}
 {{- end }}
 {{- end }}
