--- a/charts/cluster-config/values.yaml
+++ b/charts/cluster-config/values.yaml
@@ -1,2 +1,12 @@
+# -- List of namespaces to create for the Kubernetes cluster.
 namespaces:
   - csc
+# -- Site-specific Vault path for secrets.
+vault_path_prefix: ""
+# -- This section holds secret specifications.
+# Each object listed can have the following attributes defined:
+# _name_ (The name used by pods to access the secret)
+# _key_ (The key in the vault store where the secret resides)
+# _namespaces_ (The list of namespace to insert the secrets into. Add _namespaces_ to the list to use the chart configured list.)
+# _type_ (OPTIONAL: The secret type. Defaults to Opaque.)
+secrets: []
