Adhere to naming convention.

--- a/charts/cluster-config/templates/vault-secret.yaml
+++ b/charts/cluster-config/templates/vault-secret.yaml
@@ -14,7 +14,7 @@ metadata:
   name: {{ $namespace }}-{{ $secret.name }}
   namespace: {{ $namespace }}
 spec:
-  path: {{ $.Values.vault_path_prefix }}/{{ $secret.key }}
+  path: {{ $.Values.vaultPathPrefix }}/{{ $secret.key }}
   type: {{ default "Opaque" $secret.type }}
 {{- end }}
 {{- end }}
