Fix namespace for secrets.

--- a/charts/rubintv-broadcaster/templates/vault-secret.yaml
+++ b/charts/rubintv-broadcaster/templates/vault-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: ricoberger.de/v1alpha1
 kind: VaultSecret
 metadata:
   name: {{ include "rubintv-broadcaster.fullname" . }}-pull-secret
+  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/name: {{ include "rubintv-broadcaster.name" . }}
 spec:
@@ -13,6 +14,7 @@ apiVersion: ricoberger.de/v1alpha1
 kind: VaultSecret
 metadata:
   name: {{ include "rubintv-broadcaster.fullname" . }}-google-creds
+  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/name: {{ include "rubintv-broadcaster.name" . }}
 spec:
