--- a/charts/rubintv-broadcaster/templates/configmap.yaml
+++ b/charts/rubintv-broadcaster/templates/configmap.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "rubintv-broadcaster.fullname" $ }}-env-configmap
+  namespace: {{ .Values.namespace }}
 data:
   GOOGLE_APPLICATION_CREDENTIALS: "/etc/{{ include "rubintv-broadcaster.fullname" $ }}/creds/{{ .Values.credentialFile }}"
