Add failure threshold parameter for startup probe.

--- a/charts/kafka-producers/templates/deployment.yaml
+++ b/charts/kafka-producers/templates/deployment.yaml
@@ -122,6 +122,7 @@ spec:
               - /tmp/SALKAFKA_PRODUCER_RUNNING_{{ upper $producer }}
             initialDelaySeconds: {{ $.Values.startupProbe.initialDelay }}
             periodSeconds: {{ $.Values.startupProbe.period }}
+            failureThreshold: {{ $.Values.startupProbe.failureThreshold }}
           {{- end }}
       volumes:
         {{- if $.Values.useExternalConfig }}
