--- a/charts/love-nginx/values.yaml
+++ b/charts/love-nginx/values.yaml
@@ -1,16 +1,25 @@
+# -- The overall namespace for the application
 namespace: love
-
 image:
+  # -- The NGINX image to use
   repository: nginx
+  # -- The tag to use for the NGINX image
   tag: 1.14.2
+  # -- The pull policy on the NGINX image
   pullPolicy: IfNotPresent
+# -- Service type specification
 serviceType: ClusterIP
 ports:
+  # -- Container port for the NGINX service
   container: 80
+  # -- Node port for the NGINX service
   node: 30000
 ingress:
+  # -- Hostname for the NGINX ingress
   hostname: love.local
+  # -- Path name associated with the NGINX ingress
   httpPath: /
+# -- Configuration specification for the NGINX service
 config: |
   server {
     listen 80;
@@ -34,26 +43,39 @@ config: |
         alias /usr/src/love-manager/media;
     }
   }
+# -- The list of pull secrets needed for the images.
+# If this section is used, each object listed can have the following attributes defined:
+# _name_ (The label identifying the pull-secret to use)
+imagePullSecrets: []
 initContainers:
   frontend:
-    image: 
+    image:
+      # -- The frontend image to use
       repository: lsstts/love-frontend
+      # -- The tag to use for the frontend image
       tag: develop
   manager:
-    image: 
+    image:
+      # -- The static love-manager content image to use
       repository: lsstts/love-manager
+      # -- The tag to use for the love-manager static content image
       tag: develop
-    command: [ "/bin/sh", "-c", "mkdir -p /usr/src/love-manager/media/thumbnails; mkdir -p /usr/src/love-manager/media/configs; cp -Rv /usr/src/love/manager/static /usr/src/love-manager; cp -uv /usr/src/love/manager/ui_framework/fixtures/thumbnails/* /usr/src/love-manager/media/thumbnails; cp -uv /usr/src/love/manager/api/fixtures/configs/* /usr/src/love-manager/media/configs" ]
+    # -- The command to execute for the love-manager static content
+    command: ["/bin/sh", "-c", "mkdir -p /usr/src/love-manager/media/thumbnails; mkdir -p /usr/src/love-manager/media/configs; cp -Rv /usr/src/love/manager/static /usr/src/love-manager; cp -uv /usr/src/love/manager/ui_framework/fixtures/thumbnails/* /usr/src/love-manager/media/thumbnails; cp -uv /usr/src/love/manager/api/fixtures/configs/* /usr/src/love-manager/media/configs"]
 staticStore:
+  # -- Label for the NGINX static store
   name: love-nginx-static
+  # -- The storage class to request the disk allocation from
   storageClass: local-store
+  # -- The access mode for the NGINX static store
   accessMode: ReadWriteMany
+  # -- The size of the NGINX static store request
   claimSize: 2Gi
-
+# -- Resource specifications for the NGINX pod
 resources: {}
-
+# -- Node selection rules for the NGINX pod
 nodeSelector: {}
-
+# -- Toleration specifications for the NGINX pod
 tolerations: []
-
+# -- Affinity rules for the NGINX pod
 affinity: {}
