--- a/charts/love-nginx/templates/nginx-deployment.yaml
+++ b/charts/love-nginx/templates/nginx-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml .Values.imagePullSecrets | nindent 8 }}
+        {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
       {{- end }}
       initContainers:
       - name: love-frontend
