--- a/charts/love-nginx/templates/ingress.yaml
+++ b/charts/love-nginx/templates/ingress.yaml
@@ -1,11 +1,18 @@
 ---
 {{- if eq .Values.serviceType "ClusterIP" }}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-ingress
   namespace: {{ .Values.namespace }}
+  {{- with .Values.ingress.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
+  {{- if .Values.ingress.className }}
+  ingressClassName: {{ .Values.ingress.className }}
+  {{- end }}
   rules:
     - host: {{ .Values.ingress.hostname }}
       http:
