--- a/charts/love-nginx/templates/ingress.yaml
+++ b/charts/love-nginx/templates/ingress.yaml
@@ -19,6 +19,8 @@ spec:
         paths:
           - path: {{ .Values.ingress.httpPath }}
             backend:
-              serviceName: {{ .Release.Name }}-service
-              servicePort: {{ .Values.ports.container }}
+              service:
+                name: {{ .Release.Name }}-service
+                port:
+                  number: {{ .Values.ports.container }}
 {{- end }}
