--- a/charts/love-nginx/values.yaml
+++ b/charts/love-nginx/values.yaml
@@ -19,9 +19,11 @@ ingress:
   hostname: love.local
   # -- Path name associated with the NGINX ingress
   httpPath: /
+  # -- Set the Kubernetes path type for the NGINX ingress
+  pathType: ""
   # -- Assign the Ingress class name
   className: ""
-  # -- Annotations for the ingress
+  # -- Annotations for the NGINX ingress
   annotations: {}
 # -- Configuration specification for the NGINX service
 config: |
